--- a/cart.html
+++ b/cart.html
@@ -1,113 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./cart.css">
-    <link rel="icon" type="image/x-icon" href="./assets/images/mainlogoWhite.png">
-    <title>NeoAcoustics - Cart</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>NeoAcoustics - Cart</title>
+<link rel="icon" type="image/x-icon" href="./assets/images/mainlogoWhite.png">
+<link rel="stylesheet" href="cart.css">
 </head>
 <body>
 
 <div class="wrapper">
-    
-    <header class="header">
-        <div class="header-inner">
-            <img src="./assets/images/mainlogoWhite.png" height="70" alt="Logo">
-            <div class="search-bar">
-                <input type="text" placeholder="I'M LOOKING FOR">
-            </div>
-            <div class="top-icons">
-                <img src="./assets/images/questionmark.png" width="40">
-                <img src="./assets/images/globe.png" width="40">
-                <img src="./assets/images/accountlogo.png" width="40">
-            </div>
-        </div>
-    </header>
 
-    <nav class="nav-menu">
-        <a href="homePage.html">HOME</a>
-        <a href="#">CATEGORY</a>
-        <a href="bestSeller.html">BEST SELLER</a>
-        <a href="cart.html" class="active">
-            CART <img src="./assets/images/cart.png" height="24">
-        </a>
-        <a href="#">SUPPORT</a>
-    </nav>
+<header class="header">
+<div class="header-inner">
+<img src="./assets/images/mainlogoWhite.png" height="70" alt="Logo">
+<div class="search-bar">
+<input type="text" placeholder="I'M LOOKING FOR">
+</div>
+<div class="top-icons">
+<img src="./assets/images/questionmark.png" width="40">
+<img src="./assets/images/globe.png" width="40">
+<img src="./assets/images/accountlogo.png" width="40">
+</div>
+</div>
+</header>
 
-    <main class="content">
-        <h1>Shopping Cart</h1>
+<nav class="nav-menu">
+<a href="homePage.html">HOME</a>
+<a href="category.html">CATEGORY</a>
+<a href="bestSeller.html">BEST SELLER</a>
+<a href="cart.html" class="active">
+CART <img src="./assets/images/cart.png" height="24">
+</a>
+<a href="#">SUPPORT</a>
+</nav>
 
-        <div class="product-item">
-            <img src="./assets/images/battlebuds_neo.png" alt="BattleBuds Neo">
-            <div class="product-info">
-                <div class="specs">
-                    <div>Play-Time <span>50 Hr</span></div>
-                    <div>IPV Version <span>5.4</span></div>
-                    <div>Voice Driver <span>44mm</span></div>
-                    <div>AI Voice Assistant</div>
-                </div>
-                <h3>BattleBuds Neo</h3>
-                <div class="qty-price-row">
-                    <div class="quantity">
-                        <button onclick="updateQty(0,-1)">-</button>
-                        <span id="qty0">1</span>
-                        <button onclick="updateQty(0,1)">+</button>
-                    </div>
-                    <div class="price">$149.99</div>
-                </div>
-            </div>
-        </div>
+<main class="content">
+<h1>Shopping Cart</h1>
 
-        <div class="product-item">
-            <img src="./assets/images/Hammer HeadPhone.png" alt="Hammer Headphones">
-            <div class="product-info">
-                <div class="specs">
-                    <div>Play-Time <span>50 Hr</span></div>
-                    <div>IPV Version <span>5.4</span></div>
-                    <div>Voice Driver <span>44mm</span></div>
-                    <div>AI Voice Assistant</div>
-                </div>
-                <h3>Hammer Headphones</h3>
-                <div class="qty-price-row">
-                    <div class="quantity">
-                        <button onclick="updateQty(1,-1)">-</button>
-                        <span id="qty1">1</span>
-                        <button onclick="updateQty(1,1)">+</button>
-                    </div>
-                    <div class="price">$169.99</div>
-                </div>
-            </div>
-        </div>
+<div id="cart-items"></div>
 
-        <div class="summary">
-            <div class="subtotal">
-                SubTotal : <span id="total">$319.98</span>
-            </div>
-            <button class="checkout-btn" onclick="location.href='payment.html'">
-                Proceed To Payment
-            </button>
-        </div>
-    </main>
+<div class="summary">
+<div class="subtotal">
+SubTotal : <span id="total">$0.00</span>
+</div>
+<button class="checkout-btn" onclick="location.href='payment.html'">
+Proceed To Payment
+</button>
+</div>
+</main>
 
-    <footer class="footer">
-        <div>© 2025. NeoAcoustics . All Rights Reserved.</div>
-        <div>By NEO Productions.</div>
-    </footer>
+<footer class="footer">
+<div>© 2025. NeoAcoustics . All Rights Reserved.</div>
+<div>By NEO Productions.</div>
+</footer>
+
 </div>
 
 <script>
-    function updateQty(i, val) {
-        let qty = document.querySelectorAll('.quantity span')[i];
-        let n = parseInt(qty.innerText) + val;
-        if (n < 1) n = 1;
-        qty.innerText = n;
+window.onload=()=>{loadCart()}
 
-        let total = (parseInt(document.querySelectorAll('.quantity span')[0].innerText) * 149.99) +
-                    (parseInt(document.querySelectorAll('.quantity span')[1].innerText) * 169.99);
-        document.getElementById('total').innerText = '$' + total.toFixed(2);
-    }
+function loadCart(){
+let cart=JSON.parse(localStorage.getItem('cart')||'[]')
+let items=document.getElementById('cart-items')
+let total=document.getElementById('total')
+if(cart.length==0){
+items.innerHTML='<p style="text-align:center;font-size:2.5rem;margin:100px 0;color:#ff6e6e">Your cart is empty!</p>'
+total.innerText='$0.00'
+return
+}
+let t=0
+let h=''
+cart.forEach((i,x)=>{
+t+=i.price*i.qty
+h+=`
+<div class="product-item">
+<img src="${i.img}" alt="${i.name}">
+<div class="product-info">
+<div class="specs">
+<div>Play-Time <span>50 Hr</span></div>
+<div>IPX Version <span>5.4</span></div>
+<div>Voice Driver <span>44mm</span></div>
+<div>AI Voice Assistant</div>
+</div>
+<h3>${i.name}</h3>
+<div class="qty-price-row">
+<div class="quantity">
+<button onclick="updateQty(${x},-1)">-</button>
+<span>${i.qty}</span>
+<button onclick="updateQty(${x},1)">+</button>
+</div>
+<div class="price">$${(i.price*i.qty).toFixed(2)}</div>
+</div>
+</div>
+</div>`
+})
+items.innerHTML=h
+total.innerText='$'+t.toFixed(2)
+}
+
+function updateQty(i,c){
+let cart=JSON.parse(localStorage.getItem('cart')||'[]')
+cart[i].qty+=c
+if(cart[i].qty<=0)cart.splice(i,1)
+localStorage.setItem('cart',JSON.stringify(cart))
+loadCart()
+}
 </script>
 
 </body>
