--- a/homePage.html
+++ b/homePage.html
@@ -48,7 +48,7 @@
                     <div class="col-12">
                         <nav id="mainNav">
                             <a href="homePage.html" class="navLinks active text-danger">Home</a>
-                            <a href="#" class="navLinks">CATEGORIES</a>
+                            <a href="category.html" class="navLinks">CATEGORIES</a>
                             <a href="bestSeller.html" class="navLinks">BEST SELLER</a>
                             <a href="cart.html" class="navLinks d-flex align-items-center gap-1">
                                 CART <img src="./assets/images/cart.png" alt="" height="18px">
