--- a/supportPage.html
+++ b/supportPage.html
@@ -48,7 +48,7 @@
                     <div class="col-12">
                         <nav id="mainNav">
                             <a href="homePage.html" class="navLinks active">Home</a>
-                            <a href="#" class="navLinks">CATEGORIES</a>
+                            <a href="category.html" class="navLinks">CATEGORIES</a>
                             <a href="bestSeller.html" class="navLinks">BEST SELLER</a>
                             <a href="cart.html" class="navLinks d-flex align-items-center gap-1">
                                 CART <img src="./assets/images/cart.png" alt="" height="18px">
@@ -134,19 +134,6 @@
 
 
     <script>
-
-
-        function redirectCheck() {
-            let email = document.getElementById("email").value;
-            let password = document.getElementById("password").value;
-
-            if (email == "admin123@gmail.com" && password == "12345678") {
-                window.location.href = "main.html";
-            }
-        }
-
-
-
 
     </script>
 </body>
