--- a/payment.html
+++ b/payment.html
@@ -14,15 +14,15 @@
     <header class="header">
         <div class="header-inner">
             <img src="./assets/images/mainlogoWhite.png" height="70" alt="Logo">
-
-                <div class="search-bar">
-                    <input type="text" placeholder="I'M LOOKING FOR">
-                </div>
-   
-            <div class="top-icons col-sm">
+            <div class="search-bar col-sm-6">
+                <input type="text" placeholder="I'M LOOKING FOR">
+            </div>
+            <div class="top-icons">
                 <img src="./assets/images/questionmark.png" width="40">
                 <img src="./assets/images/globe.png" width="40">
-                <img src="./assets/images/accountlogo.png" width="40">
+             <a href="./loginPage.html">
+                 <img src="./assets/images/accountlogo.png" alt="acount" width="40px" height="40px">
+            </a>
             </div>
         </div>
     </header>
