Final Version Hopefully

--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
     <link href="./bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./cart.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
-    <title>NeoAcoustics - Cart</title>
+    <title>NeoAccoustics - Cart</title>
 </head>
 <body>
 
