--- a/category.html
+++ b/category.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NeoAcoustics - Category</title>
+    <title>NeoAccoustics - Category</title>
     <link rel="icon" type="image/x-icon" href="./assets/images/mainlogoWhite.png">
     <link rel="stylesheet" href="category.css">
 </head>
